prevent radial gradient stretching on extreme window lengths

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ html {
   background-repeat: no-repeat, no-repeat;
   background-position: center, center;
   background-attachment: fixed, fixed;
-  background-size: 100%, 1600px 1200px;
+  background-size: 1600px 100%, 1600px 1200px;
 }
 
 body {
